Archive2/33/8c30d69b22f57b/output
main.cpp: In function 'void Test::test2()':
main.cpp:18:27: error: cannot convert 'X::Y' to 'int' for argument '1' to 'void Test::foo(int)'
     void test2() { foo(Y{}); } // identical to test1
                           ^
